# sporkle

./: CLAUDE.md  CRITICAL_PRODUCTION_BLOCKERS.md  Cargo.toml  Makefile  NEO_GEO_AUDIT.md  QA_FINDINGS_SUMMARY.md  QA_REMEDIATION_REPORT.md  QA_REPORT_MOCKS.md  QA_REPORT_NEO_GEO.md  QA_REVIEW_CRITICAL_ISSUES.md  README.md  SPRINT_1_FENCE_RESULTS.md  SPRINT_2_ZERO_COPY.md  SPRINT_3_PM4_DIRECT.md  SPRINT_4_CLEANUP_PLAN.md  SPRINT_4_EPIC.md  build.rs
attic/: README.md
benchmarks/: gpu_baseline_results.md  gpu_execution_summary.md
docs/: ADAPTIVE_KERNEL_STRATEGY.md  ADAPTIVE_PARAMS_STATUS.md  AMDGPU_DIRECT_INTEGRATION.md  AMDGPU_SHADER_EXECUTION.md  AMD_10X_OPTIMIZATION_PLAN.md  AMD_10X_OPTIMIZATION_PLAN_REVISED.md  AMD_PERFORMANCE_BREAKTHROUGH.md  ASYNC_GPU_INTEGRATION.md  AUTOMATIC_DEVICE_SELECTION.md  BENCHMARKING_PLAN.md  CREDIBILITY_RECOVERY_STATUS.md  CURRENT_STATE.md  DEVLOG_2024_12_ADAPTIVE_PARAMS.md  DISCUSSION_MEMORY_CEILING_BREAKTHROUGH.md  DYNAMIC_SHADER_APPROACH.md  DYNAMIC_SHADER_GENERATION_PROPOSAL.md  DYNAMIC_SHADER_SYSTEM_IMPLEMENTED.md  FEATURE_ROADMAP.md  FORTRAN_PARSER_DESIGN.md  FORTRAN_SHADER_MVP.md  GITHUB_ISSUE_UNIFIED_DSL.md  GIT_HOOKS.md  GLSL_IMPLEMENTATION_STATUS.md  GLSL_KERNEL_IMPLEMENTATION_PLAN.md  GPU_ARCHITECTURE.md  GPU_ASYNC_BREAKTHROUGH.md  GPU_ASYNC_PERFORMANCE_ANALYSIS.md  GPU_ASYNC_REALITY_CHECK.md  GPU_CACHE_COMPRESSION.md  GPU_IDLE_TIME_INSIGHT.md  GPU_IMPLEMENTATION_STATUS.md  GPU_TIMING_BREAKTHROUGH.md  GPU_UNIQUE_FEATURES.md  ISSUE_STATUS.md  MILESTONE_AMDGPU_DIRECT.md  NAMING_TODO.md  PENDING_INTEGRATIONS.md  PERFORMANCE.md  (+20 more)
(+234 files in other folders)
