[package]
name = "sporkle-kronos-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dummy"
path = "src/rust/dummy.rs"

[lib]
name = "sporkle_kronos"
path = "src/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
kronos-compute = { version = "0.1.5-rc2", features = ["implementation"] }

[build-dependencies]
cc = "1.0"